# BellPi

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cleanup.sh
BellClients/: client.py
BellClients/AndroidBell/: .gitignore  AndroidManifest.xml
BellClients/AndroidBell/res/layout/: main.xml
BellClients/AndroidBell/res/menu/: main_menu.xml
BellClients/AndroidBell/res/values/: strings.xml
BellClients/AndroidBell/src/com/omniasoft/bellpi/: MainActivity.java  NetworkSocket.java
BellClients/AndroidBell/src/com/omniasoft/bellpi/packets/: Command.java  Empty.java  Fail.java  Packet.java  Register.java
BellClients/WinBell/: BellClient.sln
BellClients/WinBell/Resources/: BellClient.qrc  icon.psd  icon2.psd
BellClients/WinBell/Src/: BellClient.cpp  BellClient.h  Handlers.cpp  main.cpp
BellClients/WinBell/Ui/: Main.ui
BellClients/WinBell/VC100/: BellClient.vcxproj  BellClient.vcxproj.filters
BellServer/: BellServer.cpp  BellServer.h  BellSocket.cpp  BellSocket.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Common.h  Main.cpp  bellserver
Sockets/: CMakeLists.txt  sockets-config.h.in
Sockets/tests/: CMakeLists.txt
wiringPi/: CMakeLists.txt
